2014-05-31  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Check for COFF type directives.
	(ASM_COFF_STYLE): New substituted variable.
	* config.m4.in: Set COFF_STYLE from configure.
	* asm.m4 (PROLOGUE): Use COFF type directive, if enabled by
	configure. Fixes problem with windows dll linking.

	* asm.m4: Deleted unused offsets for struct aes_ctx.

2014-05-28  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/nettle-pbkdf2-test: Delete carriage return characters
	from output.

	* configure.ac (LIBHOGWEED_LIBS): Be explicit and link
	libhogweed.so with libnettle.so, not -lnettle.
	(LIBHOGWEED_LINK): Drop -L. flag, no longer needed, and previously
	not at the correct position in the link command line.

2014-05-27  Niels Möller  <nisse@lysator.liu.se>

	* examples/ecc-benchmark.c: If mpn_sec_powm is available,
	benchmark it, for modinv.
	(bench_modinv_powm): New function.
	(bench_curve): Use it.

2014-05-22  Niels Möller  <nisse@lysator.liu.se>

	From Claudio Bley:
	* Makefile.in ($(des_headers)): Use the EXEEXT_FOR_BUILD.

2014-05-15  Niels Möller  <nisse@lysator.liu.se>

	* NEWS: Updated with library version numbers.

	* configure.ac (dummy-dep-files): Use simpler and more portable
	sed expression. Problem reported by Peter Eriksson.
	(LIBHOGWEED_MAJOR): Bumped shared library version to 3.0.
	(LIBHOGWEED_MINOR): Reset to zero. Also increased the package
	version number to 3.0.

	* getopt.c: Don't use gettext.

2014-05-14  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/nettle-pbkdf2-test: Avoid the bash construction
	${#foo}.

	* getopt.c: Copied from glibc tree, tag glibc-2.19.
	* getopt.h: Likewise.
	* getopt1.c: Likewise.
	* getopt_int.h: New file, also copied from glibc.
	* Makefile.in (DISTFILES): Added getopt_int.h.

2014-05-09  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c: Updated, use version from gmp-6.0.0.
	* mini-gmp.h: Likewise.

	* testsuite/Makefile.in (all): Drop dependency on $(TARGETS), to