@@ -138,7 +138,7 @@ C	xorl	XREG(TMP), XREG($1)
 	ALIGN(16)
 PROLOGUE(_nettle_camellia_crypt)
 
-	W64_ENTRY(5, 0)
+	W64_ENTRY(6, 0)
 	test	LENGTH, LENGTH
 	jz	.Lend
 
@@ -197,6 +197,6 @@ PROLOGUE(_nettle_camellia_crypt)
 	pop	%rbp
 	pop	%rbx
 .Lend:
-	W64_EXIT(5, 0)
+	W64_EXIT(6, 0)
 	ret
 EPILOGUE(_nettle_camellia_crypt)
